--- a/MyDailyPal/View/Base.lproj/Main.storyboard
+++ b/MyDailyPal/View/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AXT-cV-4Ah">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AXT-cV-4Ah">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -1142,12 +1142,12 @@ tapping PIN.</string>
         <scene sceneID="Cb9-3A-spb">
             <objects>
                 <viewController id="POO-4t-j4E" customClass="SecurityQuestionsSetup_VC" customModule="MyDailyPal" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="Yxb-xc-Dcr">
+                    <view key="view" contentMode="scaleToFill" id="Yxb-xc-Dcr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your answers to the following secret questions in the event that you can forget your PIN" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UGM-rV-S9i" userLabel="Description">
-                                <rect key="frame" x="-173" y="190" width="346" height="91"/>
+                                <rect key="frame" x="14.5" y="190" width="346" height="91"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="91" id="PCe-4W-e2R"/>
                                     <constraint firstAttribute="width" constant="346" id="Tck-7M-Pq9"/>
@@ -1156,10 +1156,10 @@ tapping PIN.</string>
                                 <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uW8-Pt-t9r">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uW8-Pt-t9r">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="148"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aoU-6T-FGz">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aoU-6T-FGz">
                                         <rect key="frame" x="0.0" y="20" width="79" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="79" id="9fr-a6-IVh"/>
@@ -1173,7 +1173,7 @@ tapping PIN.</string>
                                             <action selector="backButtonPressed:" destination="POO-4t-j4E" eventType="touchUpInside" id="VDc-i1-JMS"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GSG-Q3-a17">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GSG-Q3-a17">
                                         <rect key="frame" x="296" y="20" width="79" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="79" id="Kqz-2J-ThL"/>
@@ -1197,7 +1197,7 @@ tapping PIN.</string>
                                     <constraint firstAttribute="trailing" secondItem="GSG-Q3-a17" secondAttribute="trailing" id="zgI-iC-2Oa"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fhA-gP-ltl">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fhA-gP-ltl">
                                 <rect key="frame" x="16" y="289" width="321" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="E4W-ET-Zd3"/>
@@ -1207,7 +1207,7 @@ tapping PIN.</string>
                                 <color key="textColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nxc-St-smT">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nxc-St-smT">
                                 <rect key="frame" x="16" y="422" width="321" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="EIf-Zf-pPT"/>
@@ -1218,7 +1218,7 @@ tapping PIN.</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Enter answer" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2KY-co-eBB">
-                                <rect key="frame" x="-171.5" y="451" width="343" height="30"/>
+                                <rect key="frame" x="16" y="451" width="343" height="30"/>
                                 <color key="backgroundColor" red="0.8901960784313725" green="0.88627450980392153" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="m3A-rB-3y0"/>
@@ -1230,7 +1230,7 @@ tapping PIN.</string>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Enter answer" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kzc-sL-qWe">
-                                <rect key="frame" x="-171.5" y="318" width="343" height="30"/>
+                                <rect key="frame" x="16" y="318" width="343" height="30"/>
                                 <color key="backgroundColor" red="0.88627450980392153" green="0.8901960784313725" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -1241,7 +1241,7 @@ tapping PIN.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BVN-R9-X41">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BVN-R9-X41">
                                 <rect key="frame" x="320" y="289" width="42" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="42" id="7Di-Gy-aLO"/>
@@ -1251,7 +1251,7 @@ tapping PIN.</string>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9F-9i-B1B">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9F-9i-B1B">
                                 <rect key="frame" x="320" y="422" width="42" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="d0J-Ul-htz"/>
@@ -1261,18 +1261,18 @@ tapping PIN.</string>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qEZ-iS-UXY" userLabel="TransparentBackground">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qEZ-iS-UXY" userLabel="TransparentBackground">
                                 <rect key="frame" x="-6" y="-5" width="387" height="821"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <pickerView opaque="NO" tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D68-81-OPg">
-                                <rect key="frame" x="-160" y="318" width="320" height="216"/>
+                                <rect key="frame" x="27.5" y="318" width="320" height="216"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="320" id="06e-WC-jUU"/>
                                     <constraint firstAttribute="height" constant="216" id="M40-BY-b01"/>
                                 </constraints>
                             </pickerView>
-                            <pickerView opaque="NO" tag="2" contentMode="scaleAspectFit" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ohc-xI-EgK">
+                            <pickerView opaque="NO" tag="2" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Ohc-xI-EgK">
                                 <rect key="frame" x="13" y="451" width="349" height="216"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="320" id="jcW-g4-uux"/>
@@ -3990,19 +3990,13 @@ tapping PIN.</string>
         <image name="timer" width="256" height="256"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="2HK-Gh-bdT"/>
-        <segue reference="q18-Id-8ny"/>
-        <segue reference="69G-Dn-8dk"/>
-        <segue reference="Js2-Tx-69I"/>
-        <segue reference="fSl-Iu-rXX"/>
-        <segue reference="mCc-de-661"/>
-        <segue reference="5QD-ib-SMe"/>
         <segue reference="zTS-jq-vJe"/>
         <segue reference="eZT-g8-Jrx"/>
         <segue reference="QV2-Pc-SCG"/>
         <segue reference="bXC-nq-liw"/>
         <segue reference="1ml-Am-aFS"/>
         <segue reference="sTT-BE-1CU"/>
+        <segue reference="5QD-ib-SMe"/>
         <segue reference="drF-mK-4BT"/>
         <segue reference="Uw7-eH-aiR"/>
         <segue reference="c2W-7J-82N"/>
